--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -18,7 +18,7 @@
   ],
   "description": "Sliding Picture Puzzle Game",
   "background_color": "#181818",
-  "theme_color": "#26a826",
+  "theme_color": "#9f2850",
   "lang": "en",
   "categories": [
     "entertainment",
